Classes/.clang-completion-error
/Users/xuyecheng/Documents/ios/iPlan/Classes/ModelLogic.m:13:13: error: synthesized property 'timeTable' must either be named the same as a compatible ivar or must explicitly name an ivar
@synthesize timeTable;
            ^
/Users/xuyecheng/Documents/ios/iPlan/Classes/ModelLogic.m:14:13: error: synthesized property 'moduleObjectsDict' must either be named the same as a compatible ivar or must explicitly name an ivar
@synthesize moduleObjectsDict;
            ^
/Users/xuyecheng/Documents/ios/iPlan/Classes/ModelLogic.m:34:8: error: use of undeclared identifier 'super'
    if(super !=nil)
       ^
/Users/xuyecheng/Documents/ios/iPlan/Classes/ModelLogic.m:57:21: warning: incompatible pointer types initializing 'NSMutableArray *' with an expression of type 'NSArray *'
    NSMutableArray *moduleNames = [fm contentsOfDirectoryAtPath:modulesDirectory error:nil];
                    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 warning and 3 errors generated.
